update swagger docs, create Dockerfile and docker-compose.yml
